--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "homepage": "https://cipherhacks.tech",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8787",
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@marsidev/react-turnstile": "^1.3.0",
+    "@netlify/functions": "^4.2.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -17,6 +20,7 @@
     "autoprefixer": "10.4.17",
     "framer-motion": "^12.16.0",
     "gh-pages": "^6.3.0",
+    "hono": "^4.9.2",
     "postcss": "8.4.35",
     "react": "^19.1.0",
     "react-countdown": "^2.3.6",
@@ -34,7 +38,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"yarn start\" \"yarn wrangler dev src/functions/index.ts\""
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +60,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.10"
+    "@types/react-scroll": "^1.8.10",
+    "concurrently": "^9.2.0",
+    "wrangler": "^4.30.0"
   }
 }
