--- a/package.json
+++ b/package.json
@@ -63,5 +63,6 @@
     "@types/react-scroll": "^1.8.10",
     "concurrently": "^9.2.0",
     "wrangler": "^4.30.0"
-  }
+  },
+  "packageManager": "yarn@4.9.2"
 }
