--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.1.0",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.1.0",
+    "react-pdf": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
