--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .wrangler
+
+# Lock files from other package managers (using yarn)
+bun.lock
+package-lock.json
+
+# Test/temp files
+test.html
+*.tmp
+*.bak
